tests/positive/pr118c1_print_boolean.safe
package pr118c1_print_boolean

   function log
      print (true)
